// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react/components/Step active step 1`] = `
<div>
  <div
    class="gincko__step success,step,active"
  >
    <div
      class="gincko__step__fields"
    >
      <div
        id="Field"
      />
    </div>
  </div>
</div>
`;

exports[`react/components/Step inactive step 1`] = `
<div>
  <div
    class="gincko__step success,step,"
  >
    <div
      class="gincko__step__fields"
    >
      <div
        id="Field"
      />
    </div>
  </div>
</div>
`;
